--- a/slideshows/budgie-remix/slides/link/base.css
+++ b/slideshows/budgie-remix/slides/link/base.css
@@ -123,7 +123,7 @@ strong {
 	height:68px;
 	z-index: 2;
 	background-color:#222;
-	box-shadow: 0px 1px 2px 0px #222;
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .header > .slidetitle {
